@@ -1,21 +1,0 @@
-package dk.turpem.creativetab;
-
-import net.minecraft.init.Items;
-
-public class CreativeTabUtilities {
-	public void addVanillaItems(){
-		/*Items.apple.setCreativeTab(TurpemTab.tabFood);
-		Items.arrow.setCreativeTab(TurpemTab.tabCombat);
-		Items.baked_potato.setCreativeTab(TurpemTab.tabFood);
-		Items.bed.setCreativeTab(TurpemTab.tabDecorations);
-		Items.beef.setCreativeTab(TurpemTab.tabFood);
-		Items.blaze_powder.setCreativeTab(TurpemTab.tabMaterials);
-		Items.blaze_rod.setCreativeTab(TurpemTab.tabMaterials);
-		Items.boat.setCreativeTab(TurpemTab.tabTransport);
-		Items.apple.setCreativeTab(TurpemTab.tabFood);
-		Items.apple.setCreativeTab(TurpemTab.tabFood);
-		Items.apple.setCreativeTab(TurpemTab.tabFood);
-		Items.apple.setCreativeTab(TurpemTab.tabFood);
-		Items.apple.setCreativeTab(TurpemTab.tabFood);*/
-	}
-}
